Fixing desktop project inner container spacing

--- a/styles/modules/project.module.sass
+++ b/styles/modules/project.module.sass
@@ -41,4 +41,5 @@
 			background: $navy
 			border-radius: 6px
 			flex: 1
+			justify-content: space-between
 			padding: 20px
